@@ -44,13 +44,14 @@ EBUILD lh-sources-3.3.5.ebuild 927 SHA256 0b3abcfd0de84f5a766fb94f4d6cda0c9f50e5
 EBUILD lh-sources-3.4.5.ebuild 927 SHA256 0b3abcfd0de84f5a766fb94f4d6cda0c9f50e554b044f25468a4161a6e58d24f SHA512 1f22c1c5f5395b83701790b0cfb7aaa2c53a5f10284a8849870bd260a9f4abbfc6973682945d10cfdf33827ac658722a76d1909c0e11b73c75f87fe68a5e3bc0 WHIRLPOOL 22e6e23f480e51767d8876a828a21e9933b000850bc9e58d1ff54af0638cb63d6995f096e9518f554973fbfbfaf9d9667c2a93e9f9718a0e279cf394dbd868d9
 EBUILD lh-sources-3.5.0.ebuild 927 SHA256 d113e4e7ded2c3e886a1d965cf3f1067aac0ec84a0279b5cd3a703029b6fc577 SHA512 de7a52eaeae97540a78ce7dceeaf7caa40ebee7c89abd2bcd5d03bd87392b4ebeeac6c06e0dbda875b493c4d5af66d7001b6ac70585b620bf131726b4a0c2f4c WHIRLPOOL c0b9b4ce7d60b4c92991c51325a79b30d0808c1df1de76d51cca8ffc0b13601b03382bc40724f48e0c23745007d90528da45be753998d75674a4b2c38e212105
 EBUILD lh-sources-3.5.1.ebuild 927 SHA256 5453b3a7b227e64c8cfcde1315a08af0a420287a665845a732004c60466c8211 SHA512 e54fb1a02d6e90aa8ff2a8e114e541c39636a8bed6db1bfa1edce517ec101dddee3ad436484528c8286a4884c9c40643fe71e4ef5f5f94ebf7a9a5f2046e13db WHIRLPOOL bb0422dca7b8455237faafb24c1d582bb280ca1e464642480f5e570c9afb00a3e605ee0ce6a990ae83f44221d581d1910ea47434a7e3d8c0212b6443408710c4
-MISC ChangeLog 11195 SHA256 50992700bfead9c39d678aa599d6135e97002a1496dbdefe25b690fb2043a438 SHA512 adc02936b366d53469382f158aa3736023ab1065f5c0a607f04600700e7a2a0fe9da6c09fbd321e83bdeb916eb4480d0694cd833bd528d1d4c923b8e2b982752 WHIRLPOOL 2f27cfa869e1db249d1191f8693ca22d9fc441aa0a55fa4f43ce89ee6ce18c7a313e236b6c67c661b0ceaa8647c865511cbb848c645db81ed0ab5b148e9d4c2e
+EBUILD lh-sources-3.5.2.ebuild 927 SHA256 5453b3a7b227e64c8cfcde1315a08af0a420287a665845a732004c60466c8211 SHA512 e54fb1a02d6e90aa8ff2a8e114e541c39636a8bed6db1bfa1edce517ec101dddee3ad436484528c8286a4884c9c40643fe71e4ef5f5f94ebf7a9a5f2046e13db WHIRLPOOL bb0422dca7b8455237faafb24c1d582bb280ca1e464642480f5e570c9afb00a3e605ee0ce6a990ae83f44221d581d1910ea47434a7e3d8c0212b6443408710c4
+MISC ChangeLog 11317 SHA256 9fafc324d27838315fb28ca23c36e0d3cc32fb98ec6f0ea14c0ac493771e48f6 SHA512 16b4b6f5d27d61fc292c020c181697b7e50a233accea42de5a842cd0498987397187953704f0eebf2cff9811523f5e23044907686fdee32a5688c16694a791fa WHIRLPOOL 0b08a7953c21281fa4e79520bdedccf0df2ebfead79b5c0e70c2d5d346900e8fb7ec83ec404f2f9b99edd65a448b294f68ffb2352a09aa2e5986adc86aa94566
 MISC metadata.xml 322 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc SHA512 001fce1594b001c9864d86024c45a1560b651e7dda5d81ad8190ea62c88ad48d79867a66cceb2e108e35d6c7d386799d5a3a9d705c8c3beb0c26cdb9b3b94007 WHIRLPOOL 8b233ac46194ab42d98d89be79df6b7f21843923bb9502336a8504a2e5c4de5f3d908de11baf2cf48adf04ab1b16b034707a3d4a1d8746c29bbc9574cd7248cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREIAAYFAlAnV+0ACgkQgAnW8HDreRaUSACaA8+qgFgNZ3o9GViWGaxUHav3
-sSUAn1zU5FtqNO6AgGcXMhUtBnkSyO8c
-=a/Db
+iEYEAREIAAYFAlA57AcACgkQgAnW8HDreRapOwCfU2UUXtPjbr8R3vL19PQEgnyR
+7DEAnRmcWw8x8ygHKK8V5TRfrT6Vx6sk
+=Glzd
 -----END PGP SIGNATURE-----
